--- a/Crossing Game.vcxproj.filters
+++ b/Crossing Game.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClCompile Include="HelpFunctions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="CScoreBoard.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="CANIMAL.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -57,12 +54,12 @@
     <ClCompile Include="CBIRD.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Init_Static.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="HelpFunctions.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="CScoreBoard.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CANIMAL.h">
@@ -99,6 +96,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CBIRD.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Init_Static.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
