Push code ngày chủ nhật (21/11)
Thêm đèn xanh đèn đỏ, sửa lại hàm CLane, xoá bỏ macro do thầy nói ko thích

--- a/Crossing Game.vcxproj
+++ b/Crossing Game.vcxproj
@@ -145,23 +145,27 @@
     <ClCompile Include="CDOG.cpp" />
     <ClCompile Include="CGAME.cpp" />
     <ClCompile Include="CLANE.cpp" />
+    <ClCompile Include="CCenterMenu.cpp" />
     <ClCompile Include="Console.cpp" />
     <ClCompile Include="CPEOPLE.cpp" />
     <ClCompile Include="CPOINT2D.cpp" />
     <ClCompile Include="CTRUCK.cpp" />
     <ClCompile Include="CVEHICLE.cpp" />
     <ClCompile Include="HelpFunctions.cpp" />
-    <ClCompile Include="Init_Static.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="TrafficLightGreen.cpp" />
+    <ClCompile Include="TrafficLightRedState.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CANIMAL.h" />
     <ClInclude Include="CBIRD.h" />
     <ClInclude Include="CCAR.h" />
     <ClInclude Include="CDOG.h" />
+    <ClInclude Include="CEnemyFactory.h" />
     <ClInclude Include="CGAME.h" />
     <ClInclude Include="CLANE.h" />
+    <ClInclude Include="CCenterMenu.h" />
     <ClInclude Include="Console.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="CPEOPLE.h" />
@@ -169,8 +173,9 @@
     <ClInclude Include="CTRUCK.h" />
     <ClInclude Include="CVEHICLE.h" />
     <ClInclude Include="HelpFunctions.h" />
-    <ClInclude Include="Init_Static.h" />
     <ClInclude Include="ITrafficLightState.h" />
+    <ClInclude Include="Movable.h" />
+    <ClInclude Include="Tellable.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TrafficLightGreenState.h" />
     <ClInclude Include="TrafficLightRedState.h" />
