--- a/Crossing Game.vcxproj
+++ b/Crossing Game.vcxproj
@@ -139,21 +139,40 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CAlienShip.cpp" />
     <ClCompile Include="CANIMAL.cpp" />
+    <ClCompile Include="CBIRD.cpp" />
     <ClCompile Include="CCAR.cpp" />
+    <ClCompile Include="CDOG.cpp" />
     <ClCompile Include="CGAME.cpp" />
+    <ClCompile Include="CLANE.cpp" />
+    <ClCompile Include="CCenterMenu.cpp" />
+    <ClCompile Include="CMessagePopup.cpp" />
+    <ClCompile Include="Console.cpp" />
     <ClCompile Include="CPEOPLE.cpp" />
     <ClCompile Include="CPOINT2D.cpp" />
     <ClCompile Include="CScoreBoard.cpp" />
     <ClCompile Include="CTRUCK.cpp" />
     <ClCompile Include="CVEHICLE.cpp" />
     <ClCompile Include="HelpFunctions.cpp" />
+    <ClCompile Include="ITrafficLightState.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="TrafficLightGreen.cpp" />
+    <ClCompile Include="TrafficLightRedState.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CAlienShip.h" />
     <ClInclude Include="CANIMAL.h" />
+    <ClInclude Include="CBIRD.h" />
     <ClInclude Include="CCAR.h" />
+    <ClInclude Include="CDOG.h" />
+    <ClInclude Include="CEnemyFactory.h" />
     <ClInclude Include="CGAME.h" />
+    <ClInclude Include="CLANE.h" />
+    <ClInclude Include="CCenterMenu.h" />
+    <ClInclude Include="CMessagePopup.h" />
+    <ClInclude Include="Console.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="CPEOPLE.h" />
     <ClInclude Include="CPOINT2D.h" />
@@ -161,6 +180,12 @@
     <ClInclude Include="CTRUCK.h" />
     <ClInclude Include="CVEHICLE.h" />
     <ClInclude Include="HelpFunctions.h" />
+    <ClInclude Include="ITrafficLightState.h" />
+    <ClInclude Include="Movable.h" />
+    <ClInclude Include="Tellable.h" />
+    <ClInclude Include="Texture.h" />
+    <ClInclude Include="TrafficLightGreenState.h" />
+    <ClInclude Include="TrafficLightRedState.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="text.txt" />
